2005-11-09  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 3.93 released.

2005-11-09  Per Abrahamsen  <abraham@dina.kvl.dk>

	* txt/tutorial.tex (Plotting simulation results): Updated gnuplot
	syntax.

	* source.C (description): Really a time series.

	* gnuplot.C, gnuplot.h: New component.
	* Makefile (COMPONENTS): Add it.
	* gnuplot_multi.C, gnuplot_time.C: New models.
	* Makefile (MODELS): Add them.

2005-11-07  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 3.92 released.

2005-11-07  Per Abrahamsen  <abraham@dina.kvl.dk>

	* program_gnuplot.C (legend): Support "none" keyword.

	* Version 3.91 released.

2005-11-07  Per Abrahamsen  <abraham@dina.kvl.dk>

	* program_gnuplot.C (ProgramGnuplotSyntax): User should specify
	dimension for y axis.

2005-11-04  Per Abrahamsen  <abraham@dina.kvl.dk>

	* units.C (Convert_kPa_pF): New class.
       (standard_conversions): [kPa] -> [pF].
	
2005-11-03  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 3.90 released.

2005-11-03  Per Abrahamsen  <abraham@dina.kvl.dk>

	* parser_file.C (load_list): Support '&old' keyword.

	* program_batch.C (run): Tell user more about each program started.

	* Version 3.89 released.

2005-11-03  Per Abrahamsen  <abraham@dina.kvl.dk>

	* source_file.C (add_entry, ebar): New functions.
	* source_expr.C, source_std.C: Support them.
	* program_gnuplot.C (run): Ditto.

2005-11-02  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 3.88 released.

2005-11-02  Per Abrahamsen  <abraham@dina.kvl.dk>

	* source_file.C (Filter::match): Reversed logic for padding.

	* Version 3.87 released.

2005-11-02  Per Abrahamsen  <abraham@dina.kvl.dk>

	* source_file.C (Filter::match): New function.
	(read_entry): Use it.

	* Version 3.86 released.

2005-11-02  Per Abrahamsen  <abraham@dina.kvl.dk>

	* source_file.C (get_time): Accept dd/mm/yy format.

	* source_combine.C: New model.
	* Makefile (MODELS): Added.

2005-11-01  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 3.85 released.
