@@ -1,0 +1,60 @@
+// lexer_table.h --- Lexical analysis for Daisy table files.
+// 
+// Copyright 2005 Per Abrahamsen and KVL.
+//
+// This file is part of Daisy.
+// 
+// Daisy is free software; you can redistribute it and/or modify
+// it under the terms of the GNU Lesser Public License as published by
+// the Free Software Foundation; either version 2.1 of the License, or
+// (at your option) any later version.
+// 
+// Daisy is distributed in the hope that it will be useful,
+// but WITHOUT ANY WARRANTY; without even the implied warranty of
+// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+// GNU Lesser Public License for more details.
+// 
+// You should have received a copy of the GNU Lesser Public License
+// along with Daisy; if not, write to the Free Software
+// Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+
+
+#ifndef LEXER_TABLE_H
+#define LEXER_TABLE_H
+
+#include <memory>
+#include <string>
+#include <vector>
+
+class LexerData;
+
+class LexerTable
+{
+  // Content.
+private:
+  std::auto_ptr<LexerData> lex;
+  std::string field_sep;
+  std::string type_;
+
+  // Use.
+public:
+  bool good ();
+  bool read_header ();
+  const std::string& type () const;
+private:
+  std::string get_entry () const;
+public:
+  std::vector<std::string> get_entries () const;
+
+  // Messages.
+public:
+  void warning (const std::string& str);
+  void error (const std::string& str);
+
+  // Create and Destroy.
+public:
+  LexerTable (const std::string& name, Treelog&);
+  ~LexerTable ();
+};
+
+#endif // LEXER_TABLE_H
